[tool.poetry]
name = "gvm-emulator"
version = "0.0.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "gvm_emulator"}]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
codespell = "^2.2.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
